--- a/src/main/java/GUI.form
+++ b/src/main/java/GUI.form
@@ -35,7 +35,7 @@
                           <Component id="jButton3" min="-2" max="-2" attributes="0"/>
                           <Component id="jButton1" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="86" max="32767" attributes="0"/>
+                      <EmptySpace pref="16" max="32767" attributes="0"/>
                       <Component id="jButton2" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -68,7 +68,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="jButton2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Integrante 1"/>
+        <Property name="text" type="java.lang.String" value="integrante Stalin Vicente"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jButton3">
